--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,4 +6,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+
+    <ion-row>
+  
+      <ion-button color="secondary" (click)="goProfile()">BamBamBam</ion-button>
+       
+    
+      </ion-row>
+    
+</ion-content>
